--- a/pom.xml
+++ b/pom.xml
@@ -97,10 +97,10 @@
         </dependency>
 
         <!-- JPA Provider -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.hibernate</groupId>-->
+            <!--<artifactId>hibernate-entitymanager</artifactId>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>javax.servlet</groupId>
