--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 #Database Configuration
-db.driver=org.h2.Driver
-db.url=jdbc:h2:./data/db
-db.username=sa
-db.password=minhasenha
+#db.driver=org.h2.Driver
+db.driver=com.mysql.jdbc.Driver
+#db.url=jdbc:h2:./data/db
+db.url=jdbc:mysql://localhost:3306/snu
+db.username=root
+db.password=macaco
 
 #Hibernate Configuration
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=update
 #hibernate.hbm2ddl.auto=create-drop
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
