--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
             <version>2.4.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+
         <!-- JPA Provider -->
         <!--<dependency>-->
             <!--<groupId>org.hibernate</groupId>-->
