--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 #Database Configuration
-#db.driver=org.h2.Driver
 db.driver=com.mysql.jdbc.Driver
-#db.url=jdbc:h2:./data/db
 db.url=jdbc:mysql://localhost:3306/snu
 db.username=root
 db.password=macaco
 
 #Hibernate Configuration
-#hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=update
 #hibernate.hbm2ddl.auto=create-drop
@@ -15,3 +12,6 @@ hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
 hibernate.format_sql=true
 
+spring.session.store-type=none
+
+elasticsearch.path.home=C:/dev/elasticsearch-5.0.2
