--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.maxguenes.samples</groupId>
-	<artifactId>demo-trix</artifactId>
-	<version>1.0.0</version>
-    <packaging>jar</packaging>
+	<groupId>com.upe.web</groupId>
+    <artifactId>snu-web</artifactId>
+    <version>1.0.0</version>
+    
+    <packaging>war</packaging>
 
-	<name>demo-trix</name>
-	<description>Demo project for Trix </description>
+	<name>SNU Web</name>
+	<description>Sistema de notas da UPE</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
