--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.upe.web</groupId>
+    <groupId>com.upe.web</groupId>
     <artifactId>snu-web</artifactId>
     <version>1.0.0</version>
-    
-    <packaging>war</packaging>
 
-	<name>SNU Web</name>
-	<description>Sistema de notas da UPE</description>
+    <packaging>jar</packaging>
+
+    <name>SNU Web</name>
+    <description>Sistema de notas da UPE</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
